--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container" id="app">
         <h1>Langrisser Mobile Dynamic Wiki</h1>
-        <div class="help"><a href="https://github.com/langmw/langmw.github.io/tree/master/js/db">Click to help translate and develop.</a></div>
+        <div class="help"><a href="https://github.com/langmw/langmw.github.io/tree/master/js/db" target="_blank">Click to help translate and develop.</a></div>
         <router-view></router-view>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
